refactor: 移除旧验证逻辑，统一使用V2检测方案
1. 合并 google_detector.py 到 google_auth.py，并删除前者
2. 清理 google_auth.py 中过时的文本/CSS类检测逻辑
3. 更新 all_in_one_service 等模块调用新接口
4. 完善数据库设计文档，补充 subscribed_antigravity 状态说明
5. 修复 sheerlink_service 对新状态的支持

--- a/Auto_All_System_Pyqt/docs/数据库设计文档.md
+++ b/Auto_All_System_Pyqt/docs/数据库设计文档.md
@@ -30,9 +30,11 @@ CREATE TABLE accounts (
 | 状态值 | 说明 | 描述 |
 |--------|------|------|
 | `pending_check` | 待检查 | 新导入的账号，尚未验证 |
+| `not_logged_in` | 未登录 | 检测到未登录状态 |
 | `link_ready` | 链接就绪 | 已提取SheerID验证链接，待验证 |
 | `verified` | 已验证 | 通过学生验证，未绑卡 |
 | `subscribed` | 已订阅 | 已绑卡并成功订阅 |
+| `subscribed_antigravity` | 已解锁 | 已订阅且已解锁Antigravity功能 |
 | `ineligible` | 无资格 | 不符合学生资格 |
 | `error` | 错误 | 处理过程中发生错误 |
 | `running` | 运行中 | 正在处理 |
