feat(geek): 重构2dev目录，适配GeekezBrowser
新增功能：
- geek_security.py: 安全设置自动化（2FA/辅助邮箱/备份码）
- geek_security_gui.py: 安全设置GUI窗口
- geek_process.py: 新增订阅验证方法（verify_subscription_status, click_subscribe_button等）
- geek_main_gui.py: Google专区新增安全设置和订阅验证按钮

精简文件：
- 删除BitBrowser版代码（已迁移到geek版）
- 删除测试/调试脚本
- 合并4个过时文档到README.md

文档更新：
- 更新开发者指南
- 精简README.md

--- a/2dev/geek/开发者指南.md
+++ b/2dev/geek/开发者指南.md
@@ -96,6 +96,17 @@ GUI: 2dev/geek/geek_main_gui.py
   - `GeekProcess.run_auto()`（如果提供 API Key 则走 verify_single）
 - `SheerID 批量验证` → `action_open_sheerid_window()`
   - 直接打开 `sheerid_gui.SheerIDWindow`（读取 `sheerIDlink.txt` 进行批量验证）
+- `🔐 安全设置修改` → `action_open_security_window()`
+  - 打开 `geek_security_gui.GeekSecurityWindow`
+  - 功能：修改 2FA 密钥 / 修改辅助邮箱 / 获取备份验证码 / 一键修改全部
+  - 输出文件：`2dev/new_2fa_secrets.txt`、`2dev/backup_codes.txt`
+- `📋 验证订阅状态` → `start_task("verify_subscription")`
+  - `GeekProcess.verify_subscription_status()`
+  - 检测账号订阅状态（subscribed/verified/link_ready/ineligible）并截图
+  - 输出：`screenshots/` 目录下按邮箱命名的截图
+- `🔘 点击订阅按钮` → `start_task("click_subscribe")`
+  - `GeekProcess.click_subscribe_button()`
+  - 自动点击 Subscribe 按钮并处理确认对话框
 
 ### 4.3 工具箱：数据管理
 
@@ -138,6 +149,12 @@ GUI: 2dev/geek/geek_main_gui.py
 - `sheerid_gui.py`
   - `SheerIDWindow`：现成的批量验证窗口
 
+- `2dev/geek/geek_security.py`
+  - `GeekSecurityAutomation`：安全设置自动化（修改2FA/辅助邮箱/备份码）
+
+- `2dev/geek/geek_security_gui.py`
+  - `GeekSecurityWindow`：安全设置 GUI 窗口
+
 ### 5.2 GeekProcess 自己做的事（适配层）
 
 - 解析数据文件：
@@ -152,6 +169,28 @@ GUI: 2dev/geek/geek_main_gui.py
 - Playwright 连接：
   - `_connect_page(cdp_endpoint)`：`playwright.chromium.connect_over_cdp()`
   - 通过 `LaunchInfo.cdp_endpoint`（通常是 `http://127.0.0.1:{debugPort}`）连接
+
+- 订阅验证：
+  - `verify_subscription_status(account, ...)`：检测订阅状态 + 截图
+  - `click_subscribe_button(account, ...)`：点击订阅按钮
+  - `check_confirmation_dialog(account, ...)`：处理确认对话框
+  - `verify_result(account, ...)`：验证结果 + 截图
+
+### 5.3 安全设置模块（Geek 版）
+
+文件：`2dev/geek/geek_security.py` + `2dev/geek/geek_security_gui.py`
+
+- `GeekSecurityAutomation` 类：
+  - `change_2fa_secret(email, account_info, ...)`：修改 2FA 密钥
+  - `change_recovery_email(email, account_info, new_email, ...)`：修改辅助邮箱
+  - `get_backup_codes(email, account_info, ...)`：获取备份验证码
+  - `one_click_security_update(email, account_info, ...)`：一键修改全部
+
+- `GeekSecurityWindow`：安全设置 GUI 窗口
+  - 操作模式下拉选择
+  - 账号列表表格
+  - 辅助邮箱编辑区
+  - 运行日志显示
 
 ---
 
@@ -296,3 +335,50 @@ if self.task_type == "gb_xxx":
 - 控制端口不通：先用 `GET /health` 确认 GeekezBrowser 是否用 `--control-port` 启动。
 - Playwright 连接失败：确认 `settings.json` 的 `enableRemoteDebugging=true`；以及 `/profiles/{id}/launch` 返回的 `debugPort/wsEndpoint` 是否正确。
 - 日志看不到：GUI 的 stdout/stderr capture 是在 worker thread 内完成的，业务逻辑如果开了新线程，需要注意线程上下文（当前实现用 thread-local email 标注日志）。
+
+---
+
+## 9. 文件清单（2dev/geek/）
+
+| 文件 | 用途 | 类型 |
+|------|------|------|
+| `geek_main_gui.py` | P工具箱主界面 | GUI |
+| `geek_process.py` | 流程编排层（核心） | 核心 |
+| `geek_browser_api.py` | GeekezBrowser 控制端口 API | 核心 |
+| `geek_security.py` | 安全设置自动化（2FA/邮箱/备份码） | 功能模块 |
+| `geek_security_gui.py` | 安全设置 GUI 窗口 | GUI |
+| `geek_gui.py` | 旧版简易 GUI（可选） | GUI |
+| `geek_template.py` | 连接方式示例（参考用） | 示例 |
+| `auto-goo-login.py` | 历史脚本（参考用） | 历史 |
+| `开发者指南.md` | 本文档 | 文档 |
+
+---
+
+## 10. 输出文件约定
+
+| 文件 | 写入时机 | 格式 |
+|------|----------|------|
+| `sheerIDlink.txt` | SheerLink 获取成功 | 每行一个链接 |
+| `已验证未绑卡.txt` | 学生身份已验证，待绑卡 | 账号行格式 |
+| `已绑卡号.txt` | 订阅成功 | 账号行格式 |
+| `无资格号.txt` | 无学生资格 | 账号行格式 |
+| `超时或其他错误.txt` | 操作失败 | 账号行格式 |
+| `2dev/new_2fa_secrets.txt` | 修改 2FA 成功 | `email----password----backup_email----new_secret` |
+| `2dev/backup_codes.txt` | 获取备份码成功 | `email: code1,code2,...` |
+| `screenshots/*.png` | 订阅验证截图 | `{email}_{status}_{timestamp}.png` |
+
+---
+
+## 11. task_type 完整列表
+
+| task_type | 方法 | 说明 |
+|-----------|------|------|
+| `start_app` | `AppLauncher.start()` | 启动 GeekezBrowser |
+| `ensure_profiles` | `GeekProcess.ensure_profiles()` | 创建/更新环境 |
+| `launch` | `GeekProcess.launch_by_email()` | 启动浏览器 |
+| `close` | `GeekProcess.close_by_email()` | 关闭浏览器 |
+| `sheerlink` | `GeekProcess.run_sheerlink()` | 获取 SheerLink |
+| `bind` | `GeekProcess.run_auto(api_key="")` | 仅绑卡 |
+| `auto` | `GeekProcess.run_auto()` | 全自动 |
+| `verify_subscription` | `GeekProcess.verify_subscription_status()` | 验证订阅状态 |
+| `click_subscribe` | `GeekProcess.click_subscribe_button()` | 点击订阅按钮 |
