docs: update GeekezBrowser compatibility notes

--- a/Auto_All_System_Web/docs/08-新增专区开发指南.md
+++ b/Auto_All_System_Web/docs/08-新增专区开发指南.md
@@ -30,6 +30,7 @@
 | 专区名称 | 路由路径 | 主页面组件 | 模块目录 |
 |----------|----------|------------|----------|
 | Google 业务专区 | `/google-zone` | `GoogleBusinessZone.vue` | `google-modules/` |
+| GPT 业务专区 | `/gpt-zone` | `GptBusinessZone.vue` | `gpt-modules/` |
 
 ---
 
@@ -87,12 +88,13 @@ frontend/src/
 
 | 步骤 | 操作类型 | 文件路径 | 说明 |
 |------|----------|----------|------|
-| 1 | 新建 | `src/router/modules/gpt.ts` | 专区路由模块 |
-| 2 | 修改 | `src/router/index.ts` | 引入路由模块 |
+| 1 | 新建 | `src/router/modules/gpt.ts` | 专区路由模块（可选：模块化维护） |
+| 2 | 修改 | `src/router/index.ts` | 注册专区路由（当前项目实际采用“直接写路由”方式） |
 | 3 | 新建 | `src/views/zones/gpt-modules/` | 子模块目录 |
-| 4 | 新建 | `src/views/zones/gpt-modules/WorkstationModule.vue` | 默认工作台模块 |
-| 5 | 新建 | `src/views/zones/GptBusinessZone.vue` | 专区主页面 |
+| 4 | 新建/修改 | `src/views/zones/gpt-modules/WorkstationModule.vue` | 工作台模块（推荐承载“配置 + 任务”，配置走 Web，不使用本地配置文件） |
+| 5 | 新建/修改 | `src/views/zones/GptBusinessZone.vue` | 专区主页面（独立布局 + 侧边菜单） |
 | 6 | 修改 | `src/views/zones/ZoneListView.vue` | 添加入口卡片 |
+| 7 | （可选/推荐）新建 | `backend/plugins/<your_plugin>/` | 后端插件提供 API（适合需要任务/导出等能力的专区） |
 
 ---
 
@@ -102,24 +104,24 @@ frontend/src/
 
 ```typescript
 /**
- * GPT 业务专区路由配置
+ * GPT 业务专区路由配置（预留）
+ *
+ * 说明：当前项目的主路由在 `src/router/index.ts` 里直接维护。
+ * 这里保留模块化定义，便于后续统一管理。
  */
 import type { RouteRecordRaw } from 'vue-router'
 
-const gptRoutes: RouteRecordRaw[] = [
+export const gptRoutes: Array<RouteRecordRaw> = [
   {
     path: '/gpt-zone',
     name: 'GptBusinessZone',
     component: () => import('@/views/zones/GptBusinessZone.vue'),
     meta: {
-      title: 'GPT 业务专区',
-      icon: 'mdi-robot',
+      title: 'GPT 业务',
       requiresAuth: true
     }
   }
 ]
-
-export default gptRoutes
 ```
 
 ---
@@ -128,13 +130,9 @@ export default gptRoutes
 
 **文件：** `src/router/index.ts`
 
-在文件顶部添加导入：
+当前项目实践：主路由直接维护在 `src/router/index.ts`，新增专区时**直接新增一条 route 即可**（无需 import）。
 
-```typescript
-import gptRoutes from './modules/gpt'
-```
-
-在路由数组中添加（约第 217 行，Google 专区路由后面）：
+在路由数组中添加（紧跟 Google 专区路由后面）：
 
 ```typescript
 // Google 业务专区 - 完全独立的页面
@@ -144,9 +142,20 @@ import gptRoutes from './modules/gpt'
   component: () => import('@/views/zones/GoogleBusinessZone.vue'),
   meta: { requiresAuth: true }
 },
-// GPT 业务专区
-...gptRoutes
+// GPT 业务专区 - 完全独立的页面
+{
+  path: '/gpt-zone',
+  name: 'GptBusinessZone',
+  component: () => import('@/views/zones/GptBusinessZone.vue'),
+  meta: { requiresAuth: true }
+}
 ```
+
+> 可选：如果你希望降低 `router/index.ts` 合并冲突，也可以采用模块化路由。
+> 
+> 1) 顶部导入：`import { gptRoutes } from './modules/gpt'`
+> 
+> 2) 在 routes 里追加：`...gptRoutes`
 
 ---
 
@@ -159,6 +168,10 @@ import gptRoutes from './modules/gpt'
 ### 步骤 4：创建工作台模块
 
 **文件：** `src/views/zones/gpt-modules/WorkstationModule.vue`
+
+> 提示：GPT 专区在当前系统里已经将“配置 + 任务创建 + 产物下载”集成在 `WorkstationModule.vue` 中，配置全部来自 Web（后端 `PluginState.settings`），不再使用本地 `config.toml/team.json` 作为用户配置入口。
+> 
+> 下方代码仅作为“专区工作台结构示例”。若你是新增 GPT 专区，建议直接参考现有实现：`frontend/src/views/zones/gpt-modules/WorkstationModule.vue`。
 
 ```vue
 <template>
@@ -321,6 +334,8 @@ const stats = reactive({
 ### 步骤 5：创建专区主页面
 
 **文件：** `src/views/zones/GptBusinessZone.vue`
+
+> 提示：下方代码是“专区主页面结构示例”。实际项目中的 GPT 专区主页面实现以 `frontend/src/views/zones/GptBusinessZone.vue` 为准（可能更简洁）。
 
 ```vue
 <template>
@@ -629,21 +644,21 @@ const handleCommand = (command: string) => {
 ```vue
 <!-- GPT 业务专区 -->
 <el-col :xs="24" :sm="12" :md="8" :lg="6">
-  <el-card class="zone-card featured-card" shadow="hover" @click="openGptZone" style="border-color: #10a37f;">
+  <el-card class="zone-card featured-card gpt-featured-card" shadow="hover" @click="openGptZone">
     <el-tag type="warning" class="hot-tag">NEW</el-tag>
     <div class="zone-icon">
       🤖
     </div>
     <h3>GPT 业务</h3>
-    <p class="zone-desc">GPT 相关自动化处理</p>
+    <p class="zone-desc">OpenAI Team 批量开通/授权自动化</p>
     <div class="zone-stats">
+      <div class="stat-item">
+        <div class="stat-value">{{ gptStats.teams }}</div>
+        <div class="stat-label">团队数</div>
+      </div>
       <div class="stat-item">
         <div class="stat-value">{{ gptStats.accounts }}</div>
         <div class="stat-label">账号数</div>
-      </div>
-      <div class="stat-item">
-        <div class="stat-value">{{ gptStats.active }}</div>
-        <div class="stat-label">活跃</div>
       </div>
     </div>
     <div class="zone-footer">
@@ -657,19 +672,73 @@ const handleCommand = (command: string) => {
 在 `<script setup>` 中添加：
 
 ```typescript
+import { gptBusinessApi } from '@/api/gpt_business'
+
 // GPT 专区统计
 const gptStats = reactive({
-  accounts: 0,
-  active: 0
+  teams: 0,
+  accounts: 0
 })
+
+const fetchGptStats = async () => {
+  try {
+    const stats = await gptBusinessApi.getStatistics()
+    gptStats.teams = stats.teams || 0
+    gptStats.accounts = stats.accounts || 0
+  } catch (error) {
+    // 插件未启用/未安装时可能返回 404
+    gptStats.teams = 0
+    gptStats.accounts = 0
+    console.error('Failed to fetch GPT stats:', error)
+  }
+}
 
 // 打开 GPT 专区
 const openGptZone = () => {
   router.push('/gpt-zone')
 }
+
+onMounted(() => {
+  fetchGptStats()
+})
 ```
 
 ---
+
+### 步骤 7（可选/推荐）：新增后端插件（GPT 专区实践）
+
+如果你的专区不仅是“展示页面”，还需要 **任务队列 / 导出文件 / 运行自动化 / 权限控制** 等能力，推荐走当前系统的插件体系：`backend/plugins/<plugin_name>/`。
+
+以 GPT 专区为例：我们新增了 `gpt_business` 插件，提供以下能力：
+
+- Web 配置：所有参数写入后端 `PluginState.settings`，**不再让用户维护本地 `config.toml/team.json`**
+- 任务流：
+  - `invite_only`：仅 GPTMail 生成邮箱 + OpenAI Team 批量邀请
+  - `legacy_run`：直接执行 legacy 仓库（`oai-team-auto-provisioner`，DrissionPage 自动化）
+- 产物下载：`accounts.csv / team_tracker.json / run.log ...` 存储在 `MEDIA_ROOT/gpt_business/jobs/<task_id>/`，并通过 API 下载
+
+关键代码路径：
+
+- `backend/plugins/gpt_business/plugin.py`
+- `backend/plugins/gpt_business/urls.py`
+- `backend/plugins/gpt_business/views.py`
+- `backend/plugins/gpt_business/tasks.py`
+- `backend/plugins/gpt_business/legacy_runner.py`
+
+> 说明：为了保持 legacy 仓库“零改动”，后端在执行 `legacy_run` 时会**内部生成**每个任务自己的 `config.toml` 与 `team.json`（仅用于执行兼容，不作为用户配置入口）。
+
+### 启动脚本（Windows / Linux）
+
+为了让新依赖（例如 DrissionPage）可以自动安装，启动脚本建议统一使用 `--build`：
+
+- Windows：
+  - `Auto_All_System_Web/一键启动.bat`
+  - `Auto_All_System_Web/开发模式启动.bat`
+- Linux（Ubuntu）：
+  - `Auto_All_System_Web/一键启动.sh`
+  - `Auto_All_System_Web/开发模式启动.sh`
+
+Linux 脚本会自动设置 `GEEKEZ_BROWSER_PROFILES_PATH`（避免 `docker-compose.yml` 中的 Windows 路径挂载导致启动失败）。
 
 ## Part B: 在现有专区中添加功能模块
 
