docs: update stack + migration notes

--- a/Auto_All_System_Web/docs/02-系统架构与配置.md
+++ b/Auto_All_System_Web/docs/02-系统架构与配置.md
@@ -6,7 +6,7 @@
 **技术栈**: Django 5.0 + Vue 3 + PostgreSQL 14 + Redis 7  
 **部署方式**: Docker Compose  
 **当前版本**: 1.0.0  
-**更新日期**: 2026-01-19
+**更新日期**: 2026-01-31
 
 ---
 
@@ -18,7 +18,9 @@
 |------|------|------|
 | **Vue 3** | 3.3.x | 前端框架 - 组合式API、TypeScript支持 |
 | **TypeScript** | 5.x | 类型安全 - 编译时错误检查、代码提示 |
-| **Element Plus** | 2.x | UI组件库 - 丰富的组件、响应式设计 |
+| **Tailwind CSS** | 3.4.x | 样式引擎 - 布局、间距、颜色、排版、主题变量 |
+| **shadcn-vue / reka-ui** | 2.x | UI组件方案 - 组件组合（含 legacy `el-*` 标签兼容层） |
+| **lucide-vue-next** | 0.x | 图标库 |
 | **Vite** | 5.x | 构建工具 - 快速开发、HMR |
 | **Pinia** | 2.x | 状态管理 - Vue 3官方推荐 |
 | **Vue Router** | 4.x | 路由管理 - SPA路由 |
@@ -703,4 +705,3 @@ docker-compose exec redis redis-cli ping
 **文档版本**: 1.0.0  
 **最后更新**: 2026-01-16  
 **维护者**: Auto All System Team
-
