--- a/Auto_All_System_Web/docs/03-前端页面功能.md
+++ b/Auto_All_System_Web/docs/03-前端页面功能.md
@@ -5,7 +5,7 @@
 **总页面数**: 25个  
 **用户端页面**: 12个  
 **管理后台页面**: 13个  
-**技术栈**: Vue 3 + TypeScript + Element Plus
+**技术栈**: Vue 3 + TypeScript + Tailwind CSS + shadcn-vue（含 legacy `el-*` 标签兼容层）
 
 ---
 
@@ -773,7 +773,7 @@
 
 ### 组件库
 
-使用 **Element Plus** 组件库：
+使用 legacy `el-*` 标签（由兼容层实现，底层使用 shadcn-vue + Tailwind）：
 - el-button (按钮)
 - el-table (表格)
 - el-form (表单)
@@ -891,4 +891,3 @@ ElMessage.error('操作失败：' + error.message)
 **文档版本**: 1.0.0  
 **最后更新**: 2026-01-16  
 **维护者**: Auto All System Team
-
