--- a/Auto_All_System_Web/docs/08-新增专区开发指南.md
+++ b/Auto_All_System_Web/docs/08-新增专区开发指南.md
@@ -269,7 +269,7 @@ export const gptRoutes: Array<RouteRecordRaw> = [
 
 <script setup lang="ts">
 import { reactive } from 'vue'
-import { User, Check, Clock, TrendCharts, Plus, Refresh, Download, Setting } from '@element-plus/icons-vue'
+import { User, Check, Clock, TrendCharts, Plus, Refresh, Download, Setting } from '@/icons'
 
 // 统计数据
 const stats = reactive({
@@ -421,7 +421,7 @@ import { useUserStore } from '@/stores/user'
 import {
   ChatDotRound, User, ArrowDown, DataLine,
   Fold, Expand, Back
-} from '@element-plus/icons-vue'
+} from '@/icons'
 
 // 导入模块组件
 import WorkstationModule from './gpt-modules/WorkstationModule.vue'
