--- a/Auto_All_System_Web/docs/13-前端现代化重构与UI优化计划.md
+++ b/Auto_All_System_Web/docs/13-前端现代化重构与UI优化计划.md
@@ -2,7 +2,7 @@
 
 ## 1. 背景与目标
 
-目前系统前端采用传统的 Element Plus 默认样式，视觉风格较为陈旧，缺乏 SaaS 产品的专业感和现代感。
+目前系统前端已完成从 Element Plus 迁移到 Tailwind CSS + shadcn-vue（保留 legacy `el-*` 标签兼容层），整体视觉与交互向现代 SaaS 风格收敛。
 本计划旨在通过引入 **Tailwind CSS** 和 **现代化 UI 设计规范**，将系统重构为清爽、高效、具有科技感的管理平台。
 
 ### 1.1 核心目标
@@ -13,9 +13,9 @@
 ## 2. 技术栈与规范
 
 *   **核心框架**: Vue 3 + TypeScript + Vite
-*   **UI 组件库**: Element Plus (用于复杂交互组件，如 Table, Form, Dialog)
+*   **UI 组件库**: shadcn-vue / reka-ui（复杂交互基于组件组合；legacy `el-*` 标签由兼容层提供）
 *   **样式引擎**: Tailwind CSS v3.4 (用于布局、间距、颜色、排版)
-*   **图标库**: Element Plus Icons
+*   **图标库**: lucide-vue-next（并提供 `@/icons` 兼容导出）
 
 ### 2.1 设计语言规范 (Design System)
 
@@ -94,4 +94,4 @@
 1.  **优先 Tailwind**: 能用 Tailwind 类名解决的，不要写 `<style scoped>`。
 2.  **语义化布局**: 使用 `<header>`, `<main>`, `<aside>`, `<section>` 等语义标签。
 3.  **保持一致**: 所有的卡片、按钮、输入框圆角和阴影必须遵循 `2.1` 中的规范。
-4.  **图标使用**: 统一使用 Element Plus Icons，注意大小和颜色协调。
+4.  **图标使用**: 统一使用 `lucide-vue-next`（或通过 `@/icons` 导入兼容命名），注意大小和颜色协调。
