refactor(google-business): tighten subscribed filter rules and docs
Use strict completed-subscription filters to separate verify/bindcard failures from true subscribed accounts, and document fingerprint reuse plus startupArgs behavior across README and browser pool docs.

--- a/Auto_All_System_Web/docs/12-统一浏览器池化与自动化运行时.md
+++ b/Auto_All_System_Web/docs/12-统一浏览器池化与自动化运行时.md
@@ -122,6 +122,36 @@ async def run_business_flow(*, record_id: str, profile_name: str, proxy_str: str
 
 ---
 
+## 指纹复用与风控优化
+
+### Profile 指纹复用
+
+Browser Pool 在获取 profile 时会自动处理指纹：
+
+- **首次创建**：调用 `generate_fingerprint()` 生成随机指纹（包含 Canvas/Audio 噪声、屏幕分辨率、CPU/内存等）
+- **后续复用**：保持原有指纹不变，只更新 proxy
+
+这样设计的好处：
+- 避免风控系统检测到"同一浏览器频繁变化参数"
+- 减少创建 profile 时的网络开销
+- 提高自动化任务稳定性
+
+### 启动参数
+
+Profile 创建时会自动注入反检测参数：
+
+```python
+"startupArgs": [
+    "--disable-blink-features=AutomationControlled",
+]
+```
+
+该参数用于隐藏 `navigator.webdriver` 等自动化特征。
+
+> 详细指纹参数说明见：[11-GeekezBrowser_API_变更适配说明.md](./11-GeekezBrowser_API_变更适配说明.md#风控指纹参数说明)
+
+---
+
 ## Proxy 约定
 
 统一使用 `scheme://user:pass@host:port` 字符串形式（Geekez adapter 也支持）。
